--- a/src/index.css
+++ b/src/index.css
@@ -26,7 +26,7 @@ body, html, .App, #root, .outer {
   text-align: left;
 }
 
-.inner {
+/* .inner {
   width: 450px;
   margin: auto;
   background: #ffffff;
@@ -34,7 +34,7 @@ body, html, .App, #root, .outer {
   padding: 40px 55px 45px 55px;
   border-radius: 15px;
   transition: all .3s;
-}
+} */
 
 .outer .form-control:focus {
   border-color: #167bff;
