--- a/src/App.css
+++ b/src/App.css
@@ -24,9 +24,22 @@
   color: white;
 }
 
+.navbar-identity
+{
+  margin-right: 20em;
+}
+
+
+
+.navbar-logo
+{
+  margin-left: 18em;
+}
+
 .App-link {
   color: #61dafb;
 }
+
 
 @keyframes App-logo-spin {
   from {
