--- a/src/components/Identity/identity.css
+++ b/src/components/Identity/identity.css
@@ -7,3 +7,9 @@
     border-radius: 15px;
     transition: all .3s;
   }
+
+  .btn-color
+  {
+    background-color: #1867ce;
+    color: cornsilk;
+  }
