--- a/src/components/Identity/identity.css
+++ b/src/components/Identity/identity.css
@@ -8,8 +8,8 @@
     transition: all .3s;
   }
 
-  .btn-color
+  /* .btn-color
   {
     background-color: #1867ce;
     color: cornsilk;
-  }
+  } */
