--- a/src/components/Board/board.css
+++ b/src/components/Board/board.css
@@ -1,8 +1,12 @@
 .page-item.active .page-link {
-    background-color:#6c757d;
-    border-color: #6c757d;
+  background-color: #6c757d;
+  border-color: #6c757d;
 }
 
-.page-item .page-link{
-    color: #6c757d;
+.page-item .page-link {
+  color: #6c757d;
+}
+.tHeader {
+  margin-top: 100px;
+  margin-bottom: 20px;
 }
