--- a/src/index.css
+++ b/src/index.css
@@ -6,10 +6,14 @@ body {
   min-height: 100vh;
   display: flex;
   font-weight: 400;
-  font-family: sans-serif;  
+  font-family: sans-serif;
 }
 
-body, html, .App, #root, .outer {
+body,
+html,
+.App,
+#root,
+.outer {
   width: 100%;
   height: 100%;
 }
